--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -16,6 +16,13 @@
                 <label asp-for="Username" class="form-label"></label>
             </div>
         </form>
+        <form id="profile-form" method="post">
+            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+            <div class="form-floating mb-3">
+                <input asp-for="Nickname" class="form-control" placeholder="Please choose your nickname." />
+                <label asp-for="Nickname" class="form-label"></label>
+            </div>
+        </form>
     </div>
 </div>
 
